Small devices: Fixed overflow display issue and altered credits display

--- a/style-sections.css
+++ b/style-sections.css
@@ -26,6 +26,7 @@
 	border-bottom: 0;
 	display: block;
 	padding-top: .4rem;
+	overflow: hidden;
 }
 
 .contact {
