--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ img.background {
 	height: auto;
 	position: fixed;
 	z-index: -1;
-	width: 100%;
+	max-width: 100vw;
 }
 
 p {
@@ -107,7 +107,7 @@ p {
 	overflow: auto;
 	position: fixed;
 	top: var(--navbar-height);
-	width: 100%;
+	max-width: 100vw;
 	z-index: 1;
 }
 
@@ -166,10 +166,6 @@ p {
 	width: 12rem;
 }
 
-.navbar__download-link {
-	
-}
-
 .navbar__full-bar {
 	background-color: var(--theme-color);
 	border-bottom-style: solid;
@@ -215,6 +211,7 @@ p {
 	}
 }
 
+
 @media screen and (orientation: landscape) {
 	.about__bio p {
 		font-size: 1.1rem;
@@ -243,5 +240,19 @@ p {
 
 	.navbar__links-section.orientation-reliant {
 		width: 100%;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	#credits-modal {
+		max-height: 100vh;
+	}
+
+	.credits-container {
+		display: block;
+	}
+
+	.navbar__full-bar {
+		max-width: 100vw;
 	}
 }
